FIX: TEXT ALIGNEMT FOR RESPONSIVE ON HOME PAGE

--- a/frontend/src/static/css/home/home.css
+++ b/frontend/src/static/css/home/home.css
@@ -26,3 +26,7 @@
     text-align: center;
     text-transform: uppercase;
 }
+
+.hero-div h3{
+    text-align: center;
+}
